linux (4.4~rc4-1~exp1) UNRELEASED; urgency=medium

  * New upstream release candidate

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 10 Dec 2015 17:34:39 +0000

linux (4.3-1~exp2) experimental; urgency=medium

  [ Ben Hutchings ]
  * mv643xx_eth: Re-enable TSO, fixed upstream in 4.3
  * debian/control: Move patchutils from Build-Depends to Build-Depends-Indep,
    as we only use filterdiff when building linux-source-<version>
  * debian/control,debian/rules: Support a 'stage1' build profile which
    builds only linux-libc-dev (Closes: #695243)
  * debian/control: Add ':any' to Build-Depends on python3, to support cross-
    bootstrap
  * [armhf] Enable new drivers for Allwinner chips (Closes: #804856)
    - crypto: Enable CRYPTO_DEV_SUN4I_SS as module
    - musb: Enable USB_MUSB_SUNXI as module
  * aufs: Update support patches to aufs4.3-20151116
  * [armhf] USB: Change USB, USB_GADGET, and various drivers from built-in to
    modules
    - musb: Enable USB_MUSB_DUAL_ROLE
  * [armhf] musb: Disable MUSB_PIO_ONLY and enable USB_INVENTRA_DMA,
    USB_TI_CPPI41_DMA, USB_TUSB_OMAP_DMA

  [ Ian Campbell ]
  * [armel/orion5x] Enable Device Tree for orion5x. Patch from Roger Shimizu
    (Closes: #803159)
  * [armel/orion5x] Enable CONFIG_DEBUG_LL_UART_8250.

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Dec 2015 19:36:10 +0000

linux (4.3-1~exp1) experimental; urgency=medium

  * New upstream release

  [ Ben Hutchings ]
  * netfilter: Enable NFT_DUP_IPV4, NFT_DUP_IPV6 as modules (Closes: #803370)
  * tests: Add autopkgtest support
  * [x86] Compile with gcc-5
  * [x86] Enable PINCTRL_BAYTRAIL (Closes: #797949)

  [ Salvatore Bonaccorso ]
  * Fix typo in image.plain.postinst template.
    Add missing space in warn message causing typo "dangling linkto".
    Thanks to Jakub Wilk <jwilk@debian.org> (Closes: #803323)

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 04 Nov 2015 07:45:13 +0000

linux (4.3~rc7-1~exp1) experimental; urgency=medium
