@@ -1,18 +1,18 @@
 From: J. R. Okajima <hooanon05@yahoo.co.jp>
-Date: Fri Nov 6 10:26:35 2015 +0900
-Subject: aufs4.3 base patch
-Origin: https://github.com/sfjro/aufs4-standalone/tree/d376e884b0bb6d059bf616443042a016b26326a8
+Date: Sat Nov 21 10:43:50 2015 +0900
+Subject: aufs4.x-rcN base patch
+Origin: https://github.com/sfjro/aufs4-standalone/tree/980697121e7bb079411664d77caa8f1e489f344c
 Bug-Debian: https://bugs.debian.org/541828
 
 Patch headers added by debian/patches/features/all/aufs4/gen-patch
 
-aufs4.3 base patch
+aufs4.x-rcN base patch
 
 diff --git a/MAINTAINERS b/MAINTAINERS
-index 747c653..53ecc33 100644
+index e9caa4b..ddb7b8a 100644
 --- a/MAINTAINERS
 +++ b/MAINTAINERS
-@@ -1985,6 +1985,19 @@ F:	include/linux/audit.h
+@@ -2028,6 +2028,19 @@ F:	include/linux/audit.h
  F:	include/uapi/linux/audit.h
  F:	kernel/audit*
  
@@ -33,10 +33,10 @@ index 747c653..53ecc33 100644
  M:	Miguel Ojeda Sandonis <miguel.ojeda.sandonis@gmail.com>
  W:	http://miguelojeda.es/auxdisplay.htm
 diff --git a/drivers/block/loop.c b/drivers/block/loop.c
-index 674f800a..291ec9e 100644
+index 423f4ca..abfdd2b 100644
 --- a/drivers/block/loop.c
 +++ b/drivers/block/loop.c
-@@ -560,6 +560,24 @@ static inline int is_loop_device(struct file *file)
+@@ -706,6 +706,24 @@ static inline int is_loop_device(struct file *file)
  	return i && S_ISBLK(i->i_mode) && MAJOR(i->i_rdev) == LOOP_MAJOR;
  }
  
@@ -108,7 +108,7 @@ index 819ef3f..fd0414e 100644
  {
  	mm_segment_t old_fs;
 diff --git a/fs/splice.c b/fs/splice.c
-index 5fc1e50..5f8385a 100644
+index 801c21c..218d188 100644
 --- a/fs/splice.c
 +++ b/fs/splice.c
 @@ -1102,8 +1102,8 @@ EXPORT_SYMBOL(generic_splice_sendpage);
@@ -148,10 +148,10 @@ index f87d308..9a290b3 100644
  static inline void fput_light(struct file *file, int fput_needed)
  {
 diff --git a/include/linux/fs.h b/include/linux/fs.h
-index 72d8a84..fabd9d7a 100644
+index 3aa5142..8d48506 100644
 --- a/include/linux/fs.h
 +++ b/include/linux/fs.h
-@@ -1687,6 +1687,12 @@ ssize_t rw_copy_check_uvector(int type, const struct iovec __user * uvector,
+@@ -1672,6 +1672,12 @@ ssize_t rw_copy_check_uvector(int type, const struct iovec __user * uvector,
  			      struct iovec *fast_pointer,
  			      struct iovec **ret_pointer);
  
