@@ -1,18 +1,18 @@
 From: J. R. Okajima <hooanon05@yahoo.co.jp>
-Date: Fri Nov 6 10:26:35 2015 +0900
-Subject: aufs4.3 mmap patch
-Origin: https://github.com/sfjro/aufs4-standalone/tree/d376e884b0bb6d059bf616443042a016b26326a8
+Date: Sat Nov 21 10:43:50 2015 +0900
+Subject: aufs4.x-rcN mmap patch
+Origin: https://github.com/sfjro/aufs4-standalone/tree/980697121e7bb079411664d77caa8f1e489f344c
 Bug-Debian: https://bugs.debian.org/541828
 
 Patch headers added by debian/patches/features/all/aufs4/gen-patch
 
-aufs4.3 mmap patch
+aufs4.x-rcN mmap patch
 
-[bwh: Forward-ported to 4.4-rc4: drop change in block_page_mkwrite()]
-
+diff --git a/fs/proc/base.c b/fs/proc/base.c
+index bd3e9e6..fc42216 100644
 --- a/fs/proc/base.c
 +++ b/fs/proc/base.c
-@@ -1921,7 +1921,7 @@ static int proc_map_files_get_link(struc
+@@ -1921,7 +1921,7 @@ static int proc_map_files_get_link(struct dentry *dentry, struct path *path)
  	down_read(&mm->mmap_sem);
  	vma = find_exact_vma(mm, vm_start, vm_end);
  	if (vma && vma->vm_file) {
@@ -21,9 +21,11 @@ aufs4.3 mmap patch
  		path_get(path);
  		rc = 0;
  	}
+diff --git a/fs/proc/nommu.c b/fs/proc/nommu.c
+index f8595e8..cb8eda0 100644
 --- a/fs/proc/nommu.c
 +++ b/fs/proc/nommu.c
-@@ -45,7 +45,10 @@ static int nommu_region_show(struct seq_
+@@ -45,7 +45,10 @@ static int nommu_region_show(struct seq_file *m, struct vm_region *region)
  	file = region->vm_file;
  
  	if (file) {
@@ -35,9 +37,11 @@ aufs4.3 mmap patch
  		dev = inode->i_sb->s_dev;
  		ino = inode->i_ino;
  	}
+diff --git a/fs/proc/task_mmu.c b/fs/proc/task_mmu.c
+index 187b3b5..e03793e 100644
 --- a/fs/proc/task_mmu.c
 +++ b/fs/proc/task_mmu.c
-@@ -281,7 +281,10 @@ show_map_vma(struct seq_file *m, struct
+@@ -281,7 +281,10 @@ show_map_vma(struct seq_file *m, struct vm_area_struct *vma, int is_pid)
  	const char *name = NULL;
  
  	if (file) {
@@ -49,7 +53,7 @@ aufs4.3 mmap patch
  		dev = inode->i_sb->s_dev;
  		ino = inode->i_ino;
  		pgoff = ((loff_t)vma->vm_pgoff) << PAGE_SHIFT;
-@@ -1505,7 +1508,7 @@ static int show_numa_map(struct seq_file
+@@ -1505,7 +1508,7 @@ static int show_numa_map(struct seq_file *m, void *v, int is_pid)
  	struct proc_maps_private *proc_priv = &numa_priv->proc_maps;
  	struct vm_area_struct *vma = v;
  	struct numa_maps *md = &numa_priv->md;
@@ -58,9 +62,11 @@ aufs4.3 mmap patch
  	struct mm_struct *mm = vma->vm_mm;
  	struct mm_walk walk = {
  		.hugetlb_entry = gather_hugetlb_stats,
+diff --git a/fs/proc/task_nommu.c b/fs/proc/task_nommu.c
+index e0d64c9..7aa92db 100644
 --- a/fs/proc/task_nommu.c
 +++ b/fs/proc/task_nommu.c
-@@ -160,7 +160,10 @@ static int nommu_vma_show(struct seq_fil
+@@ -160,7 +160,10 @@ static int nommu_vma_show(struct seq_file *m, struct vm_area_struct *vma,
  	file = vma->vm_file;
  
  	if (file) {
@@ -72,9 +78,11 @@ aufs4.3 mmap patch
  		dev = inode->i_sb->s_dev;
  		ino = inode->i_ino;
  		pgoff = (loff_t)vma->vm_pgoff << PAGE_SHIFT;
+diff --git a/include/linux/mm.h b/include/linux/mm.h
+index 00bad77..cc616b0 100644
 --- a/include/linux/mm.h
 +++ b/include/linux/mm.h
-@@ -1183,6 +1183,28 @@ static inline int fixup_user_fault(struc
+@@ -1183,6 +1183,28 @@ static inline int fixup_user_fault(struct task_struct *tsk,
  }
  #endif
  
@@ -103,6 +111,8 @@ aufs4.3 mmap patch
  extern int access_process_vm(struct task_struct *tsk, unsigned long addr, void *buf, int len, int write);
  extern int access_remote_vm(struct mm_struct *mm, unsigned long addr,
  		void *buf, int len, int write);
+diff --git a/include/linux/mm_types.h b/include/linux/mm_types.h
+index f8d1492..c3a3760 100644
 --- a/include/linux/mm_types.h
 +++ b/include/linux/mm_types.h
 @@ -272,6 +272,7 @@ struct vm_region {
@@ -121,9 +131,11 @@ aufs4.3 mmap patch
  	void * vm_private_data;		/* was vm_pte (shared mem) */
  
  #ifndef CONFIG_MMU
+diff --git a/kernel/fork.c b/kernel/fork.c
+index f97f2c4..3ef40d6 100644
 --- a/kernel/fork.c
 +++ b/kernel/fork.c
-@@ -464,7 +464,7 @@ static int dup_mmap(struct mm_struct *mm
+@@ -464,7 +464,7 @@ static int dup_mmap(struct mm_struct *mm, struct mm_struct *oldmm)
  			struct inode *inode = file_inode(file);
  			struct address_space *mapping = file->f_mapping;
  
@@ -132,9 +144,11 @@ aufs4.3 mmap patch
  			if (tmp->vm_flags & VM_DENYWRITE)
  				atomic_dec(&inode->i_writecount);
  			i_mmap_lock_write(mapping);
+diff --git a/mm/Makefile b/mm/Makefile
+index 2ed4319..e3a53f5 100644
 --- a/mm/Makefile
 +++ b/mm/Makefile
-@@ -21,7 +21,7 @@ obj-y			:= filemap.o mempool.o oom_kill.
+@@ -21,7 +21,7 @@ obj-y			:= filemap.o mempool.o oom_kill.o \
  			   mm_init.o mmu_context.o percpu.o slab_common.o \
  			   compaction.o vmacache.o \
  			   interval_tree.o list_lru.o workingset.o \
@@ -143,9 +157,11 @@ aufs4.3 mmap patch
  
  obj-y += init-mm.o
  
+diff --git a/mm/filemap.c b/mm/filemap.c
+index 1bb0076..8eaece8 100644
 --- a/mm/filemap.c
 +++ b/mm/filemap.c
-@@ -2128,7 +2128,7 @@ int filemap_page_mkwrite(struct vm_area_
+@@ -2128,7 +2128,7 @@ int filemap_page_mkwrite(struct vm_area_struct *vma, struct vm_fault *vmf)
  	int ret = VM_FAULT_LOCKED;
  
  	sb_start_pagefault(inode->i_sb);
@@ -154,9 +170,11 @@ aufs4.3 mmap patch
  	lock_page(page);
  	if (page->mapping != inode->i_mapping) {
  		unlock_page(page);
+diff --git a/mm/memory.c b/mm/memory.c
+index deb679c..df2ce3e 100644
 --- a/mm/memory.c
 +++ b/mm/memory.c
-@@ -2035,7 +2035,7 @@ static inline int wp_page_reuse(struct m
+@@ -2035,7 +2035,7 @@ static inline int wp_page_reuse(struct mm_struct *mm,
  		}
  
  		if (!page_mkwrite)
@@ -165,9 +183,11 @@ aufs4.3 mmap patch
  	}
  
  	return VM_FAULT_WRITE;
+diff --git a/mm/mmap.c b/mm/mmap.c
+index 2ce04a6..f555c0a 100644
 --- a/mm/mmap.c
 +++ b/mm/mmap.c
-@@ -275,7 +275,7 @@ static struct vm_area_struct *remove_vma
+@@ -275,7 +275,7 @@ static struct vm_area_struct *remove_vma(struct vm_area_struct *vma)
  	if (vma->vm_ops && vma->vm_ops->close)
  		vma->vm_ops->close(vma);
  	if (vma->vm_file)
@@ -176,7 +196,7 @@ aufs4.3 mmap patch
  	mpol_put(vma_policy(vma));
  	kmem_cache_free(vm_area_cachep, vma);
  	return next;
-@@ -887,7 +887,7 @@ again:			remove_next = 1 + (end > next->
+@@ -887,7 +887,7 @@ again:			remove_next = 1 + (end > next->vm_end);
  	if (remove_next) {
  		if (file) {
  			uprobe_munmap(next, next->vm_start, next->vm_end);
@@ -195,7 +215,7 @@ aufs4.3 mmap patch
  
  	/* Undo any partial mapping done by a device driver. */
  	unmap_region(mm, vma, prev, vma->vm_start, vma->vm_end);
-@@ -2488,7 +2488,7 @@ static int __split_vma(struct mm_struct
+@@ -2488,7 +2488,7 @@ static int __split_vma(struct mm_struct *mm, struct vm_area_struct *vma,
  		goto out_free_mpol;
  
  	if (new->vm_file)
@@ -204,7 +224,7 @@ aufs4.3 mmap patch
  
  	if (new->vm_ops && new->vm_ops->open)
  		new->vm_ops->open(new);
-@@ -2507,7 +2507,7 @@ static int __split_vma(struct mm_struct
+@@ -2507,7 +2507,7 @@ static int __split_vma(struct mm_struct *mm, struct vm_area_struct *vma,
  	if (new->vm_ops && new->vm_ops->close)
  		new->vm_ops->close(new);
  	if (new->vm_file)
@@ -213,7 +233,7 @@ aufs4.3 mmap patch
  	unlink_anon_vmas(new);
   out_free_mpol:
  	mpol_put(vma_policy(new));
-@@ -2649,7 +2649,6 @@ SYSCALL_DEFINE5(remap_file_pages, unsign
+@@ -2649,7 +2649,6 @@ SYSCALL_DEFINE5(remap_file_pages, unsigned long, start, unsigned long, size,
  	struct vm_area_struct *vma;
  	unsigned long populate = 0;
  	unsigned long ret = -EINVAL;
@@ -221,7 +241,7 @@ aufs4.3 mmap patch
  
  	pr_warn_once("%s (%d) uses deprecated remap_file_pages() syscall. "
  			"See Documentation/vm/remap_file_pages.txt.\n",
-@@ -2693,10 +2692,10 @@ SYSCALL_DEFINE5(remap_file_pages, unsign
+@@ -2693,10 +2692,10 @@ SYSCALL_DEFINE5(remap_file_pages, unsigned long, start, unsigned long, size,
  		munlock_vma_pages_range(vma, start, start + size);
  	}
  
@@ -234,7 +254,7 @@ aufs4.3 mmap patch
  out:
  	up_write(&mm->mmap_sem);
  	if (populate)
-@@ -2966,7 +2965,7 @@ struct vm_area_struct *copy_vma(struct v
+@@ -2966,7 +2965,7 @@ struct vm_area_struct *copy_vma(struct vm_area_struct **vmap,
  		if (anon_vma_clone(new_vma, vma))
  			goto out_free_mempol;
  		if (new_vma->vm_file)
@@ -243,9 +263,11 @@ aufs4.3 mmap patch
  		if (new_vma->vm_ops && new_vma->vm_ops->open)
  			new_vma->vm_ops->open(new_vma);
  		vma_link(mm, new_vma, prev, rb_link, rb_parent);
+diff --git a/mm/nommu.c b/mm/nommu.c
+index 92be862..29179f7 100644
 --- a/mm/nommu.c
 +++ b/mm/nommu.c
-@@ -671,7 +671,7 @@ static void __put_nommu_region(struct vm
+@@ -671,7 +671,7 @@ static void __put_nommu_region(struct vm_region *region)
  		up_write(&nommu_region_sem);
  
  		if (region->vm_file)
@@ -254,7 +276,7 @@ aufs4.3 mmap patch
  
  		/* IO memory and memory shared directly out of the pagecache
  		 * from ramfs/tmpfs mustn't be released here */
-@@ -829,7 +829,7 @@ static void delete_vma(struct mm_struct
+@@ -829,7 +829,7 @@ static void delete_vma(struct mm_struct *mm, struct vm_area_struct *vma)
  	if (vma->vm_ops && vma->vm_ops->close)
  		vma->vm_ops->close(vma);
  	if (vma->vm_file)
@@ -285,6 +307,9 @@ aufs4.3 mmap patch
  	kmem_cache_free(vm_area_cachep, vma);
  	return ret;
  
+diff --git a/mm/prfile.c b/mm/prfile.c
+new file mode 100644
+index 0000000..b323b8a
 --- /dev/null
 +++ b/mm/prfile.c
 @@ -0,0 +1,86 @@
