@@ -1,12 +1,12 @@
 From: J. R. Okajima <hooanon05@yahoo.co.jp>
-Date: Fri Nov 6 10:26:35 2015 +0900
-Subject: aufs4.3 standalone patch
-Origin: https://github.com/sfjro/aufs4-standalone/tree/d376e884b0bb6d059bf616443042a016b26326a8
+Date: Sat Nov 21 10:43:50 2015 +0900
+Subject: aufs4.x-rcN standalone patch
+Origin: https://github.com/sfjro/aufs4-standalone/tree/980697121e7bb079411664d77caa8f1e489f344c
 Bug-Debian: https://bugs.debian.org/541828
 
 Patch headers added by debian/patches/features/all/aufs4/gen-patch
 
-aufs4.3 standalone patch
+aufs4.x-rcN standalone patch
 
 diff --git a/fs/dcache.c b/fs/dcache.c
 index 8aa7f26..f997345 100644
@@ -185,7 +185,7 @@ index fd0414e..8ace6ec 100644
  ssize_t __kernel_write(struct file *file, const char *buf, size_t count, loff_t *pos)
  {
 diff --git a/fs/splice.c b/fs/splice.c
-index 5f8385a..f76067e 100644
+index 218d188..aa4f0d1 100644
 --- a/fs/splice.c
 +++ b/fs/splice.c
 @@ -1115,6 +1115,7 @@ long do_splice_from(struct pipe_inode_info *pipe, struct file *out,
@@ -205,7 +205,7 @@ index 5f8385a..f76067e 100644
  /**
   * splice_direct_to_actor - splices data directly between two non-pipes
 diff --git a/fs/xattr.c b/fs/xattr.c
-index 072fee1..a7677af 100644
+index 9b932b9..44c457a 100644
 --- a/fs/xattr.c
 +++ b/fs/xattr.c
 @@ -207,6 +207,7 @@ vfs_getxattr_alloc(struct dentry *dentry, const char *name, char **xattr_value,
