@@ -2,6 +2,9 @@ linux (4.4~rc4-1~exp1) UNRELEASED; urgency=medium
 
   * New upstream release candidate
 
+  [ Ben Hutchings ]
+  * aufs: Update support patches to aufs4.x-rcN-20151123
+
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 10 Dec 2015 17:34:39 +0000
 
 linux (4.3-1~exp2) experimental; urgency=medium
